removed getPatches endpoint
